# country-picker

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
assets/styles/: style.qss
country_picker/: __init__.py  __main__.py  app.py  country_fetcher.py  country_picker.py  country_picker_app.py  fetcher.py  resources.py  style.qss  style_loader.py  version.py
country_picker/assets/: styles.qss
country_picker/tests/: test_country_fetcher.py
tests/: test_country_fetcher.py  test_fetcher.py  test_network.py
