[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqt5-country-picker"
version = "0.1.0"
description = "PyQt5 widget for selecting countries"
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = "Ahmad Naja", email = "ahmad‑naja@hotmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "PyQt5",
  "requests"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["country_picker*"]

[tool.setuptools.package-data]
"country_picker" = ["data/countries.json"]
